change z-index on wrapper_price

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,3 +18,4 @@
 @import './pagesExcursions/page1DescriptionExcursion';
 @import './pagesExcursions/page1Calendar';
 @import './pagesExcursions/page1DescriptionWay';
+@import './pagesExcursions/add-costs';
