done all but without small details

--- a/src/partials/pagesExcursions/page1Add-costs.html
+++ b/src/partials/pagesExcursions/page1Add-costs.html
@@ -46,6 +46,11 @@
           <p class="text">Термальне джерело</p>
         </div>
       </div>
+      <div class="forYellowCircle">
+        <div class="wrapperFor_price">
+          <p class="price">Обід</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
