--- a/src/partials/pagesExcursions/page1DescriptionWay.html
+++ b/src/partials/pagesExcursions/page1DescriptionWay.html
@@ -15,7 +15,7 @@
           Юпшарський каньйон ("Кам'яний мішок"), Озеро "Ріца", Водоспади "Дівочі та чоловічі
           сльози".
         </p>
-        <p class="page1dDescriptionWay_list_subTitle">Далее на выбор:</p>
+        <p class="page1dDescriptionWay_list_subTitle">Дальше на вибір:</p>
         <p class="page1dDescriptionWay_list_item">
           Монастир "Новий Афон", Новоафонська Печера, "Рукотворний" водоспад, храм "Симона
           Кананіта", Лебедине озеро.
