--- a/src/sass/pagesExcursions/_page1DescriptionExcursion.scss
+++ b/src/sass/pagesExcursions/_page1DescriptionExcursion.scss
@@ -64,6 +64,8 @@
     background-color: #ffc700;
     z-index: -1;
   }
+}
+.page1Description_forYellowCircle {
   &:nth-child(1) {
   }
   &:nth-child(2) {
