--- a/src/partials/Excursions/ourTrip.html
+++ b/src/partials/Excursions/ourTrip.html
@@ -3,6 +3,50 @@
   <div class="ourTrip_wrapperForTrips ourTrip_slider">
     <ul class="list ourTrip_list ourTrip_slider_line">
       <li class="ourTrip_item ourTrip_slider_line_content">
+        <div class="ourTrip_item_img"><img src="./images/greenRock.jpg" alt="" /></div>
+        <div class="wrapperFor_item_content">
+          <p class="ourTrip_item_subTitle">Автобусний тур</p>
+          <h2 class="ourTrip_item_title">Золота каблучка Абхазії (з Адлера)</h2>
+          <div class="wrapperFor_ourTrip_cost">
+            <div class="wrapperFor_oldBillet">
+              <p class="ourTrip_cost_money">
+                <svg width="20" height="20">
+                  <use href="./images/svg/symbols.svg#svgrepo_money"></use>
+                </svg>
+                1 618 &#8372;
+              </p>
+              <p class="ourTrip_oldBillet">Дорослий квиток</p>
+            </div>
+            <div class="wrapperFor_youngBillet">
+              <p class="ourTrip_cost_money">
+                <svg width="20" height="20">
+                  <use href="./images/svg/symbols.svg#svgrepo_money"></use>
+                </svg>
+                1 412 &#8372;
+              </p>
+              <p class="ourTrip_youngBillet">Дитячий квиток</p>
+            </div>
+            <p class="ourTrip_cost_time">
+              <svg width="15" height="15">
+                <use href="./images/svg/symbols.svg#svgrepo_clock"></use>
+              </svg>
+              2,5 часа
+            </p>
+          </div>
+          <p class="ourTrip_text">
+            На Вас чекає подорож по "Золотому Кільцю Абхазії" на Мерседес Спрінтер (20 місць). За
+            маршрутом вас супроводжуватиме професійний гід. Посадка на екскурсію здійснюється з
+            вашого готелю чи найближчої автобусної зупинки. Перетин кордону без пересадок.
+          </p>
+          <div class="wrapperFor_ourTrip_buttons">
+            <a class="ourTrip_button" href="./page1.html">Детальніше</a>
+            <span class="ourTrip_span">
+              <svg width="20" height="20"><use href="./images/svg/symbols.svg#heart"></use></svg>
+            </span>
+          </div>
+        </div>
+      </li>
+      <li class="ourTrip_item ourTrip_slider_line_content">
         <div class="ourTrip_item_img"><img src="./images/tower.jpg" alt="" /></div>
         <div class="wrapperFor_item_content">
           <p class="ourTrip_item_subTitle">Автобусний тур</p>
@@ -39,7 +83,7 @@
             вашого готелю чи найближчої автобусної зупинки. Перетин кордону без пересадок.
           </p>
           <div class="wrapperFor_ourTrip_buttons">
-            <a class="ourTrip_button" href="#">Детальніше</a>
+            <a class="ourTrip_button" href="./page1.html">Детальніше</a>
             <span class="ourTrip_span">
               <svg width="20" height="20"><use href="./images/svg/symbols.svg#heart"></use></svg>
             </span>
@@ -83,7 +127,7 @@
             вашого готелю чи найближчої автобусної зупинки. Перетин кордону без пересадок.
           </p>
           <div class="wrapperFor_ourTrip_buttons">
-            <a class="ourTrip_button" href="#">Детальніше</a>
+            <a class="ourTrip_button" href="./page1.html">Детальніше</a>
             <span class="ourTrip_span">
               <svg width="20" height="20"><use href="./images/svg/symbols.svg#heart"></use></svg>
             </span>
@@ -92,50 +136,6 @@
       </li>
       <li class="ourTrip_item ourTrip_slider_line_content">
         <div class="ourTrip_item_img"><img src="./images/ATV.jpg" alt="" /></div>
-        <div class="wrapperFor_item_content">
-          <p class="ourTrip_item_subTitle">Автобусний тур</p>
-          <h2 class="ourTrip_item_title">Золота каблучка Абхазії (з Адлера)</h2>
-          <div class="wrapperFor_ourTrip_cost">
-            <div class="wrapperFor_oldBillet">
-              <p class="ourTrip_cost_money">
-                <svg width="20" height="20">
-                  <use href="./images/svg/symbols.svg#svgrepo_money"></use>
-                </svg>
-                1 618 &#8372;
-              </p>
-              <p class="ourTrip_oldBillet">Дорослий квиток</p>
-            </div>
-            <div class="wrapperFor_youngBillet">
-              <p class="ourTrip_cost_money">
-                <svg width="20" height="20">
-                  <use href="./images/svg/symbols.svg#svgrepo_money"></use>
-                </svg>
-                1 412 &#8372;
-              </p>
-              <p class="ourTrip_youngBillet">Дитячий квиток</p>
-            </div>
-            <p class="ourTrip_cost_time">
-              <svg width="15" height="15">
-                <use href="./images/svg/symbols.svg#svgrepo_clock"></use>
-              </svg>
-              2,5 часа
-            </p>
-          </div>
-          <p class="ourTrip_text">
-            На Вас чекає подорож по "Золотому Кільцю Абхазії" на Мерседес Спрінтер (20 місць). За
-            маршрутом вас супроводжуватиме професійний гід. Посадка на екскурсію здійснюється з
-            вашого готелю чи найближчої автобусної зупинки. Перетин кордону без пересадок.
-          </p>
-          <div class="wrapperFor_ourTrip_buttons">
-            <a class="ourTrip_button" href="#">Детальніше</a>
-            <span class="ourTrip_span">
-              <svg width="20" height="20"><use href="./images/svg/symbols.svg#heart"></use></svg>
-            </span>
-          </div>
-        </div>
-      </li>
-      <li class="ourTrip_item ourTrip_slider_line_content">
-        <div class="ourTrip_item_img"><img src="./images/greenRock.jpg" alt="" /></div>
         <div class="wrapperFor_item_content">
           <p class="ourTrip_item_subTitle">Автобусний тур</p>
           <h2 class="ourTrip_item_title">Золота каблучка Абхазії (з Адлера)</h2>
