--- a/src/partials/pagesExcursions/page1DescriptionExcursion.html
+++ b/src/partials/pagesExcursions/page1DescriptionExcursion.html
@@ -9,7 +9,7 @@
       </p>
     </div>
     <div class="wrapperFor_prices">
-      <div class="forYellowCircle">
+      <div class="forYellowCircle page1Description_forYellowCircle">
         <div class="wrapperFor_price">
           <p class="price">
             <svg width="30" height="30">
@@ -20,7 +20,7 @@
           <p class="text">Дорослий квиток</p>
         </div>
       </div>
-      <div class="forYellowCircle">
+      <div class="forYellowCircle page1Description_forYellowCircle">
         <div class="wrapperFor_price">
           <p class="price">
             <svg width="30" height="30">
@@ -31,7 +31,7 @@
           <p class="text">Дитячий квиток</p>
         </div>
       </div>
-      <div class="forYellowCircle">
+      <div class="forYellowCircle page1Description_forYellowCircle">
         <div class="wrapperFor_price">
           <p class="price">
             <svg width="20" height="20">
