--- a/src/partials/Main/popularExcursions.html
+++ b/src/partials/Main/popularExcursions.html
@@ -7,137 +7,136 @@
     <div class="popularExcursions_slaider">
       <div class="popularExcursions_slaider_line">
         <div class="popularExcursions_slaider_line_content backImage-bridge">
-          <p class="content_subTitle">Автобусный тур</p>
-          <h2 class="content_title">Обзорная по Сочи (из Адлера)</h2>
+          <p class="content_subTitle">Автобусний тур</p>
+          <h2 class="content_title">Оглядова по Сочі (з Адлера)</h2>
           <div class="wrapper_for_cost">
-            <p class="cost_time">6 часов</p>
-            <p class="cost_money">618 ₽</p>
+            <p class="cost_time">6 годин</p>
+            <p class="cost_money">618 &#8372;</p>
           </div>
           <p class="content_text">
-            Приглашаем вас на экскурсию "Обзорная по Большому Сочи": Экскурсия начнется с подъёма на
-            гору Большой Ахун - это высшая точка (665 метров) на побережьи Сочи. На вершине горы
-            Большой Ахун есть смотровая башня, построенная в 1935-36 годах по проекту архитектора С.
-            И. Воробьева...
+            Запрошуємо вас на екскурсію "Оглядова по Великому Сочі": Екскурсія розпочнеться з
+            підйому на гору Великий Ахун – це найвища точка (665 метрів) на узбережжі Сочі. На
+            вершині гори Великий Ахун є оглядова вежа, збудована у 1935-36 роках за проектом
+            архітектора С. І. Воробйова...
           </p>
-          <a class="content_button" href="#">Подробнее</a>
+          <a class="content_button" href="./page1.html">Детальніше</a>
         </div>
         <div class="popularExcursions_slaider_line_content backImage-horse">
-          <p class="content_subTitle">Конный тур</p>
-          <h2 class="content_title">Конные прогулки</h2>
+          <p class="content_subTitle">Кінний тур</p>
+          <h2 class="content_title">Кінні прогулянки</h2>
           <div class="wrapper_for_cost">
-            <p class="cost_time">1,5 часа</p>
-            <p class="cost_money">1 809 ₽</p>
+            <p class="cost_time">1,5 години</p>
+            <p class="cost_money">1 809 &#8372;</p>
           </div>
           <p class="content_text">
-            Конные прогулки проходят в Лазурной долине. С долины открывается красивый вид на море,
-            горы и лес. На всем пути следования экскурсии вас будут сопровождать опытные
-            инструктора. Катание на лошадях или иппотерапия очень полезна для детей и взрослых...
+            Кінні прогулянки відбуваються у Лазурній долині. З долини відкривається чудовий краєвид
+            на море, гори та ліс. На всьому шляху екскурсії вас супроводжуватимуть досвідчені
+            інструктора. Катання на конях або іпотерапія дуже корисна для дітей та дорослих.
           </p>
-          <a class="content_button" href="#">Подробнее</a>
+          <a class="content_button" href="./page1.html">Детальніше</a>
         </div>
         <div class="popularExcursions_slaider_line_content backImage-waterfall">
           <p class="content_subTitle">Квадротур</p>
-          <h2 class="content_title">Пасть дракона</h2>
+          <h2 class="content_title">Паща дракона</h2>
           <div class="wrapper_for_cost">
-            <p class="cost_time">2,5 часа</p>
-            <p class="cost_money">3 515 ₽</p>
+            <p class="cost_time">2,5 години</p>
+            <p class="cost_money">3 515 &#8372;</p>
           </div>
           <p class="content_text">
-            Маршрут на Квадроциклах проходит по горной реке Мзымта вдоль белых скал и самшитовый лес
-            к водопаду Глубокий Яр или "Пасть Дракона" (экскурсионное название). Высота водопада
-            41,5 метр - это один из самых высоких водопадов Большого Сочи...
+            Маршрут на Квадроциклах проходить гірською річкою Мзимта вздовж білих скель і самшитовий
+            ліс до водоспаду Глибокий Яр або "Паща Дракона" (екскурсійна назва). Висота водоспаду
+            41,5 метри - це один з найвищих водоспадів Великого Сочі.
           </p>
-          <a class="content_button" href="#">Подробнее</a>
+          <a class="content_button" href="./page1.html">Детальніше</a>
         </div>
         <div class="popularExcursions_slaider_line_content backImage-monastery">
-          <p class="content_subTitle">Автобусный тур</p>
-          <h2 class="content_title">Женский монастырь</h2>
+          <p class="content_subTitle">Автобусний тур</p>
+          <h2 class="content_title">Жіночий монастир</h2>
           <div class="wrapper_for_cost">
-            <p class="cost_time">4 часа</p>
-            <p class="cost_money">418 ₽</p>
+            <p class="cost_time">4 години</p>
+            <p class="cost_money">418 &#8372;</p>
           </div>
           <p class="content_text">
-            Троице - Георгиевский женский монастырь расположен в селе Лесное в живописном месте, в
-            котором гармонично сочетаются красота природы и красота архитектуры сотворенная руками
-            человека. Это удивительное место расположено совсем недалеко от Чёрного моря - всего в
-            20 километрах
+            Трійці - Георгіївський жіночий монастир розташований в селі Лісове в мальовничому місці
+            якому гармонійно поєднуються краса природи та краса архітектури створена руками людини.
+            Це дивовижне місце розташоване зовсім неподалік Чорного моря - всього в 20 кілометрах
           </p>
-          <a class="content_button" href="#">Подробнее</a>
+          <a class="content_button" href="./page1.html">Детальніше</a>
         </div>
         <div class="popularExcursions_slaider_line_content backImage-bridge">
-          <p class="content_subTitle">Автобусный тур</p>
-          <h2 class="content_title">Обзорная по Сочи (из Адлера)</h2>
+          <p class="content_subTitle">Автобусний тур</p>
+          <h2 class="content_title">Оглядова по Сочі (з Адлера)</h2>
           <div class="wrapper_for_cost">
-            <p class="cost_time">6 часов</p>
-            <p class="cost_money">618 ₽</p>
+            <p class="cost_time">6 годин</p>
+            <p class="cost_money">618 &#8372;</p>
           </div>
           <p class="content_text">
-            Приглашаем вас на экскурсию "Обзорная по Большому Сочи": Экскурсия начнется с подъёма на
-            гору Большой Ахун - это высшая точка (665 метров) на побережьи Сочи. На вершине горы
-            Большой Ахун есть смотровая башня, построенная в 1935-36 годах по проекту архитектора С.
-            И. Воробьева...
+            Запрошуємо вас на екскурсію "Оглядова по Великому Сочі": Екскурсія розпочнеться з
+            підйому на гору Великий Ахун – це найвища точка (665 метрів) на узбережжі Сочі. На
+            вершині гори Великий Ахун є оглядова вежа, збудована у 1935-36 роках за проектом
+            архітектора С. І. Воробйова...
           </p>
-          <a class="content_button" href="#">Подробнее</a>
+          <a class="content_button" href="./page1.html">Детальніше</a>
         </div>
         <div class="popularExcursions_slaider_line_content backImage-horse">
-          <p class="content_subTitle">Автобусный тур</p>
-          <h2 class="content_title">Обзорная по Сочи (из Адлера)</h2>
+          <p class="content_subTitle">Автобусний тур</p>
+          <h2 class="content_title">Оглядова по Сочі (з Адлера)</h2>
           <div class="wrapper_for_cost">
-            <p class="cost_time">6 часов</p>
-            <p class="cost_money">618 ₽</p>
+            <p class="cost_time">6 годин</p>
+            <p class="cost_money">618 &#8372;</p>
           </div>
           <p class="content_text">
-            Приглашаем вас на экскурсию "Обзорная по Большому Сочи": Экскурсия начнется с подъёма на
-            гору Большой Ахун - это высшая точка (665 метров) на побережьи Сочи. На вершине горы
-            Большой Ахун есть смотровая башня, построенная в 1935-36 годах по проекту архитектора С.
-            И. Воробьева...
+            Запрошуємо вас на екскурсію "Оглядова по Великому Сочі": Екскурсія розпочнеться з
+            підйому на гору Великий Ахун – це найвища точка (665 метрів) на узбережжі Сочі. На
+            вершині гори Великий Ахун є оглядова вежа, збудована у 1935-36 роках за проектом
+            архітектора С. І. Воробйова...
           </p>
-          <a class="content_button" href="#">Подробнее</a>
+          <a class="content_button" href="./page1.html">Детальніше</a>
         </div>
         <div class="popularExcursions_slaider_line_content backImage-waterfall">
-          <p class="content_subTitle">Автобусный тур</p>
-          <h2 class="content_title">Обзорная по Сочи (из Адлера)</h2>
+          <p class="content_subTitle">Автобусний тур</p>
+          <h2 class="content_title">Оглядова по Сочі (з Адлера)</h2>
           <div class="wrapper_for_cost">
-            <p class="cost_time">6 часов</p>
-            <p class="cost_money">618 ₽</p>
+            <p class="cost_time">6 годин</p>
+            <p class="cost_money">618 &#8372;</p>
           </div>
           <p class="content_text">
-            Приглашаем вас на экскурсию "Обзорная по Большому Сочи": Экскурсия начнется с подъёма на
-            гору Большой Ахун - это высшая точка (665 метров) на побережьи Сочи. На вершине горы
-            Большой Ахун есть смотровая башня, построенная в 1935-36 годах по проекту архитектора С.
-            И. Воробьева...
+            Запрошуємо вас на екскурсію "Оглядова по Великому Сочі": Екскурсія розпочнеться з
+            підйому на гору Великий Ахун – це найвища точка (665 метрів) на узбережжі Сочі. На
+            вершині гори Великий Ахун є оглядова вежа, збудована у 1935-36 роках за проектом
+            архітектора С. І. Воробйова...
           </p>
-          <a class="content_button" href="#">Подробнее</a>
+          <a class="content_button" href="./page1.html">Детальніше</a>
         </div>
         <div class="popularExcursions_slaider_line_content backImage-monastery">
-          <p class="content_subTitle">Автобусный тур</p>
-          <h2 class="content_title">Обзорная по Сочи (из Адлера)</h2>
+          <p class="content_subTitle">Автобусний тур</p>
+          <h2 class="content_title">Оглядова по Сочі (з Адлера)</h2>
           <div class="wrapper_for_cost">
-            <p class="cost_time">6 часов</p>
-            <p class="cost_money">618 ₽</p>
+            <p class="cost_time">6 годин</p>
+            <p class="cost_money">618 &#8372;</p>
           </div>
           <p class="content_text">
-            Приглашаем вас на экскурсию "Обзорная по Большому Сочи": Экскурсия начнется с подъёма на
-            гору Большой Ахун - это высшая точка (665 метров) на побережьи Сочи. На вершине горы
-            Большой Ахун есть смотровая башня, построенная в 1935-36 годах по проекту архитектора С.
-            И. Воробьева...
+            Запрошуємо вас на екскурсію "Оглядова по Великому Сочі": Екскурсія розпочнеться з
+            підйому на гору Великий Ахун – це найвища точка (665 метрів) на узбережжі Сочі. На
+            вершині гори Великий Ахун є оглядова вежа, збудована у 1935-36 роках за проектом
+            архітектора С. І. Воробйова...
           </p>
-          <a class="content_button" href="#">Подробнее</a>
+          <a class="content_button" href="./page1.html">Детальніше</a>
         </div>
         <div class="popularExcursions_slaider_line_content backImage-bridge">
-          <p class="content_subTitle">Автобусный тур</p>
-          <h2 class="content_title">Обзорная по Сочи (из Адлера)</h2>
+          <p class="content_subTitle">Автобусний тур</p>
+          <h2 class="content_title">Оглядова по Сочі (з Адлера)</h2>
           <div class="wrapper_for_cost">
-            <p class="cost_time">6 часов</p>
-            <p class="cost_money">618 ₽</p>
+            <p class="cost_time">6 годин</p>
+            <p class="cost_money">618 &#8372;</p>
           </div>
           <p class="content_text">
-            Приглашаем вас на экскурсию "Обзорная по Большому Сочи": Экскурсия начнется с подъёма на
-            гору Большой Ахун - это высшая точка (665 метров) на побережьи Сочи. На вершине горы
-            Большой Ахун есть смотровая башня, построенная в 1935-36 годах по проекту архитектора С.
-            И. Воробьева...
+            Запрошуємо вас на екскурсію "Оглядова по Великому Сочі": Екскурсія розпочнеться з
+            підйому на гору Великий Ахун – це найвища точка (665 метрів) на узбережжі Сочі. На
+            вершині гори Великий Ахун є оглядова вежа, збудована у 1935-36 роках за проектом
+            архітектора С. І. Воробйова...
           </p>
-          <a class="content_button" href="#">Подробнее</a>
+          <a class="content_button" href="./page1.html">Детальніше</a>
         </div>
       </div>
     </div>
