--- a/src/sass/Excursions/_ourTrip.scss
+++ b/src/sass/Excursions/_ourTrip.scss
@@ -207,7 +207,7 @@
   border: 2px solid #ededed;
   cursor: pointer;
   & svg {
-    fill: #d4d4d4;
+    fill: rgb(0, 0, 0, 0.5);
   }
   &:hover {
     border-color: #0499dd;
